--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 		all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn
 		over pairs of matching cards.</p>
 
- 		<div>
-   		 <img src="images/back.png" alt="Queen of Diamonds">
-    	 <img src="images/back.png" alt="Queen of Hearts">
-    	<img src="images/back.png" alt="King of Diamonds">
-     	<img src="images/back.png" alt="King of Hearts">
-  		</div>
+		<div id="game-board"></div>
+		<div class="board clearfix"></div>
+
+	<p class="reset">
+		<input type="button" value="Reset Game" onClick="window.location.reload()">
+	</p>
 
 		<p><h4>About the Game's Author</h4></p>
 
